# Crane

./: .gitignore  Cargo.toml  README.md  checkpoints
crane/: Cargo.toml
crane-core/: Cargo.toml
crane-core/src/: autotokenizer.rs  bins.rs  chat.rs  lib.rs
crane-core/src/generation/: based.rs  mod.rs  streamer.rs
crane-core/src/models/: conn_ve_llm.rs  mod.rs  namo2.rs  orpheus.rs  qwen25.rs  siglip2.rs  snac.rs
crane-core/src/utils/: token_output_stream.rs  utils.rs
crane-oai/: Cargo.toml
crane/apps/deepseek/: main.rs
crane/apps/example/: main.rs
crane/apps/llmbench/: main.rs
crane/apps/qwenchat/: main.rs
crane/src/: main.rs
crane_core/: Cargo.toml
crane_core/src/models/: mod.rs  qwen25.rs  siglip2.rs
crane_core/src/utils/: mod.rs
data/: .gitignore
scripts/: cal_tokens.py  export_onnx_snac.py  speed_torch.py  test_orpheus.py
src/models/: qwen25.rs
