[package]
name = "crane_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"

candle-nn = "0.8.4"
candle-transformers = "0.8.4"
clap = { version = "4.5.32", features = ["derive"] }
hf-hub = "0.4.2"
serde = "1.0.219"
serde_json = "1.0.140"
tokenizers = "0.21.1"

# candle-core = { version = "0.8.4", features = ["accelerate"] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { version = "0.8.4", features = ["metal"] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
candle-core = { version = "0.8.4", features = ["accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.8.4", optional = true }
