[package]
name = "crane"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.32", features = ["derive"]}

crane-core = { path = "../crane-core" }


[[bin]]
name = "llmbench"
path = "apps/llmbench/main.rs"

[[bin]]
name = "sparktts"
path = "apps/sparktts/main.rs"

[[bin]]
name = "example"
path = "apps/example/main.rs"