[package]
name = "crane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = {version = "4.5.32", features = ["derive"]}
colored = "3.0.0"

crane-core = { path = "../crane-core" }


[[bin]]
name = "llmbench"
path = "apps/llmbench/main.rs"

[[bin]]
name = "sparktts"
path = "apps/sparktts/main.rs"

[[bin]]
name = "qwenchat"
path = "apps/qwenchat/main.rs"

[[bin]]
name = "example"
path = "apps/example/main.rs"
