[package]
name = "crane_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
candle-core = { version = "0.8.4", features = ["accelerate"] }
candle-nn = "0.8.4"
candle-transformers = "0.8.4"
clap = { version = "4.5.32", features = ["derive"] }
hf-hub = "0.4.2"
serde_json = "1.0.140"
tokenizers = "0.21.1"
